fix: 添加地址文案修改；其他地址不筛掉币付宝；首页用户等级错误；路由登录注册错误

--- a/HYNewNest/Features(主代码)/AddressComponent/Controller/CNAddAddressVC.xib
+++ b/HYNewNest/Features(主代码)/AddressComponent/Controller/CNAddAddressVC.xib
@@ -12,6 +12,8 @@
             <connections>
                 <outlet property="borderLineCenterX" destination="FBK-hg-VgS" id="2xX-8A-VMA"/>
                 <outlet property="bottomLine" destination="O9X-Ck-hDR" id="iQh-7Y-OAX"/>
+                <outlet property="btomTipsLb" destination="bbZ-H9-SiW" id="fCd-aB-qOK"/>
+                <outlet property="btomTipsTitle" destination="dmy-mo-Bzk" id="K1w-7g-5bj"/>
                 <outlet property="codeInputView" destination="Z5l-eH-dIo" id="Id4-UB-c3E"/>
                 <outlet property="goldBtn" destination="ehq-pc-lky" id="brE-eB-7gz"/>
                 <outlet property="linkInputView" destination="NA1-ca-qVu" id="icI-UW-pzs"/>
@@ -86,7 +88,7 @@
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbZ-H9-SiW">
                     <rect key="frame" x="72" y="745" width="270" height="29"/>
-                    <string key="text">提币到其他账户，属于即时到账转款，为保障您的
+                    <string key="text">提现到其他账户，属于即时到账转款，为保障您的
 资金安全，请确保账号输入无误！</string>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
