--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNForgotCodeVC.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNForgotCodeVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,12 +11,15 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CNForgotCodeVC">
             <connections>
                 <outlet property="inputTF" destination="YoX-SH-X4k" id="bFh-bW-LIN"/>
+                <outlet property="inputTfTopMargin" destination="n0u-mG-gl4" id="KCh-Ps-r9a"/>
                 <outlet property="lineView" destination="git-c7-zpE" id="Mqv-Ho-cGC"/>
                 <outlet property="phoneInputTip" destination="U3i-28-aPD" id="2ui-Dt-nq1"/>
                 <outlet property="sendCodeBtn" destination="02n-zQ-LAZ" id="Gst-N8-5Lx"/>
                 <outlet property="shakingView" destination="zlC-Sk-kCd" id="G9a-nb-DMD"/>
                 <outlet property="submitBtn" destination="TTB-nh-bU5" id="V3O-ae-ydu"/>
                 <outlet property="titleLb" destination="G1O-it-Bhq" id="bcS-D0-E70"/>
+                <outlet property="titleLbH" destination="KVX-jh-WBu" id="UhF-JF-erj"/>
+                <outlet property="titleLbTopMargin" destination="n0u-mG-gl4" id="l91-KI-eKM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -27,6 +30,9 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通过手机号找回" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1O-it-Bhq">
                     <rect key="frame" x="30" y="96" width="213" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="KVX-jh-WBu"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                     <color key="textColor" white="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
