--- a/HYNewNest/Features(主代码)/HomeComponent/Controller/CNHomeVC.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/Controller/CNHomeVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -20,6 +20,7 @@
                 <outlet property="pageViewH" destination="3GI-aw-17d" id="gOz-PX-dt7"/>
                 <outlet property="scrollContentView" destination="0FR-uQ-Sdz" id="mfX-td-nZB"/>
                 <outlet property="scrollContentW" destination="Qmj-YK-vSP" id="Ky3-AI-z7R"/>
+                <outlet property="scrollView" destination="gTY-no-Ada" id="JGo-SZ-Ahq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outletCollection property="switchBtnArr" destination="Nep-cf-vOF" id="6JU-uH-ZsQ"/>
                 <outletCollection property="switchBtnArr" destination="A2t-Nu-r4K" id="5hj-z6-uPT"/>
