--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
@@ -70,7 +70,7 @@
                         <constraint firstAttribute="height" constant="10" id="ZHd-CY-AFa"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(限额1千-1000万)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FAh-Y6-h6W">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="(限额1千-1000万)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FAh-Y6-h6W">
                     <rect key="frame" x="128" y="27.5" width="99.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                     <color key="textColor" white="1" alpha="0.39554794519999997" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -181,6 +181,7 @@
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="top" secondItem="9sI-aL-Ark" secondAttribute="bottom" id="1PR-XB-Hcy"/>
                 <constraint firstItem="yO4-69-pdJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="350-dK-RsT"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="7n2-cA-Z9u"/>
+                <constraint firstItem="9sI-aL-Ark" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="FAh-Y6-h6W" secondAttribute="trailing" constant="10" id="8Ur-6c-E9E"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="8v9-MN-1or"/>
                 <constraint firstItem="FAh-Y6-h6W" firstAttribute="leading" secondItem="RwZ-pY-ihD" secondAttribute="trailing" constant="8" id="AMz-8H-6ov"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="AyK-W6-RC9"/>
@@ -215,7 +216,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="123.18840579710145" y="-85.044642857142847"/>
+            <point key="canvasLocation" x="13" y="-96"/>
         </view>
     </objects>
     <resources>
