--- a/HYNewNest/Other/Base.lproj/LaunchScreen.storyboard
+++ b/HYNewNest/Other/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qdy" translatesAutoresizingMaskIntoConstraints="NO" id="LUG-lC-bEi">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CIRCULAR.png" translatesAutoresizingMaskIntoConstraints="NO" id="LUG-lC-bEi">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                         </subviews>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="qdy" width="375" height="812"/>
+        <image name="CIRCULAR.png" width="1125" height="2436"/>
     </resources>
 </document>
