--- a/HYNewNest/Features(主代码)/FriendComponent/View/CNShareView.xib
+++ b/HYNewNest/Features(主代码)/FriendComponent/View/CNShareView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -89,7 +89,7 @@
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                             <inset key="titleEdgeInsets" minX="-40" minY="40" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="20" minY="-20" maxX="0.0" maxY="0.0"/>
-                                            <state key="normal" title="微信朋友圈" image="share_pyq">
+                                            <state key="normal" title="短信" image="share_xinxi">
                                                 <color key="titleColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
                                             <connections>
@@ -186,9 +186,9 @@
     <resources>
         <image name="l_close" width="30" height="30"/>
         <image name="share_lianjie" width="42" height="42"/>
-        <image name="share_pyq" width="42" height="42"/>
         <image name="share_qq" width="42" height="42"/>
         <image name="share_sina" width="42" height="42"/>
         <image name="share_wx" width="42" height="42"/>
+        <image name="share_xinxi" width="42" height="42"/>
     </resources>
 </document>
