--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNLoginRegisterVC.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNLoginRegisterVC.xib
@@ -216,16 +216,6 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2C-Tp-I0L" userLabel="Register">
                             <rect key="frame" x="382.5" y="0.0" width="382.5" height="700"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7e-vY-Z5E">
-                                    <rect key="frame" x="286.5" y="24" width="70" height="32"/>
-                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                    <state key="normal" title="去登录 ＞">
-                                        <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="goToLogin:" destination="-1" eventType="touchUpInside" id="hxy-Hp-xMI"/>
-                                    </connections>
-                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注册" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAo-ez-34N">
                                     <rect key="frame" x="30" y="52" width="61" height="36"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
@@ -270,7 +260,7 @@
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6o-d8-huP">
-                                    <rect key="frame" x="80.5" y="488.5" width="221.5" height="20"/>
+                                    <rect key="frame" x="80.5" y="508" width="221.5" height="20"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注册即代表您已阅读并同意" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eiu-A6-F8r">
                                             <rect key="frame" x="0.0" y="0.0" width="147.5" height="20"/>
@@ -302,7 +292,7 @@
                                     </constraints>
                                 </view>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner-home" translatesAutoresizingMaskIntoConstraints="NO" id="Jq6-Fa-SOJ">
-                                    <rect key="frame" x="30" y="532.5" width="322.5" height="107.5"/>
+                                    <rect key="frame" x="30" y="552" width="322.5" height="107.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Jq6-Fa-SOJ" secondAttribute="height" multiplier="105:35" id="zi6-UP-IZ5"/>
                                     </constraints>
@@ -312,10 +302,21 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7e-vY-Z5E">
+                                    <rect key="frame" x="286.5" y="19" width="70" height="32"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                    <state key="normal" title="去登录 ＞">
+                                        <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="goToLogin:" destination="-1" eventType="touchUpInside" id="hxy-Hp-xMI"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="VQ0-bZ-lqu" firstAttribute="leading" secondItem="v2C-Tp-I0L" secondAttribute="leading" constant="30" id="2Nv-3J-HHc"/>
+                                <constraint firstItem="h6o-d8-huP" firstAttribute="top" secondItem="B9t-YC-g4T" secondAttribute="bottom" constant="74" id="7wj-jd-S1o"/>
                                 <constraint firstItem="VQ0-bZ-lqu" firstAttribute="top" secondItem="pAo-ez-34N" secondAttribute="bottom" constant="25" id="9B6-ie-bTk"/>
                                 <constraint firstItem="z3O-uN-pkb" firstAttribute="top" secondItem="ir0-JM-89g" secondAttribute="bottom" id="9GY-dn-iti"/>
                                 <constraint firstAttribute="trailing" secondItem="B9t-YC-g4T" secondAttribute="trailing" constant="30" id="9Na-bb-tYI"/>
@@ -326,10 +327,9 @@
                                 <constraint firstItem="pAo-ez-34N" firstAttribute="leading" secondItem="v2C-Tp-I0L" secondAttribute="leading" constant="30" id="Omt-iX-QWc"/>
                                 <constraint firstAttribute="trailing" secondItem="T7e-vY-Z5E" secondAttribute="trailing" constant="26" id="PXp-Vk-JAQ"/>
                                 <constraint firstItem="h6o-d8-huP" firstAttribute="centerX" secondItem="v2C-Tp-I0L" secondAttribute="centerX" id="RyG-wB-fAW"/>
-                                <constraint firstAttribute="bottom" secondItem="Jq6-Fa-SOJ" secondAttribute="bottom" constant="60" id="SgC-uu-8A3"/>
-                                <constraint firstItem="T7e-vY-Z5E" firstAttribute="top" secondItem="v2C-Tp-I0L" secondAttribute="top" constant="24" id="VAd-ki-b8w"/>
                                 <constraint firstItem="B9t-YC-g4T" firstAttribute="leading" secondItem="v2C-Tp-I0L" secondAttribute="leading" constant="30" id="aJW-W9-uGf"/>
                                 <constraint firstAttribute="trailing" secondItem="z3O-uN-pkb" secondAttribute="trailing" constant="30" id="bKz-7X-kCr"/>
+                                <constraint firstItem="T7e-vY-Z5E" firstAttribute="centerY" secondItem="pAo-ez-34N" secondAttribute="centerY" constant="-35" id="eLb-3H-cDr"/>
                                 <constraint firstItem="Jq6-Fa-SOJ" firstAttribute="top" secondItem="h6o-d8-huP" secondAttribute="bottom" constant="24" id="nU4-hp-RPd"/>
                                 <constraint firstItem="z3O-uN-pkb" firstAttribute="leading" secondItem="v2C-Tp-I0L" secondAttribute="leading" constant="30" id="qop-hA-Th1"/>
                                 <constraint firstItem="ir0-JM-89g" firstAttribute="top" secondItem="VQ0-bZ-lqu" secondAttribute="bottom" id="rTV-4S-tlf"/>
