--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNLoginSuccChooseAccountVC.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/Controller/CNLoginSuccChooseAccountVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -20,43 +20,18 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZc-Zp-EPP">
-                    <rect key="frame" x="30" y="96" width="175" height="106"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="欢迎来到" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fS-sC-h9X">
-                            <rect key="frame" x="0.0" y="0.0" width="97.5" height="29"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
-                            <color key="textColor" white="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="匿名  安全  游戏  稳定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OpM-f5-PkI">
-                            <rect key="frame" x="0.0" y="91" width="118.5" height="15"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="币游数字站" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsw-6N-OOm">
-                            <rect key="frame" x="0.0" y="39" width="175" height="41"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="34"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <gestureRecognizers/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="l_USDT" translatesAutoresizingMaskIntoConstraints="NO" id="v4p-XN-AKB">
+                    <rect key="frame" x="169" y="44" width="245" height="227"/>
                     <constraints>
-                        <constraint firstItem="Lsw-6N-OOm" firstAttribute="top" secondItem="2fS-sC-h9X" secondAttribute="bottom" constant="10" id="31D-pm-Jv4"/>
-                        <constraint firstItem="2fS-sC-h9X" firstAttribute="top" secondItem="qZc-Zp-EPP" secondAttribute="top" id="3eD-Lq-9bQ"/>
-                        <constraint firstItem="OpM-f5-PkI" firstAttribute="top" secondItem="Lsw-6N-OOm" secondAttribute="bottom" constant="11" id="5Dj-oT-xgv"/>
-                        <constraint firstAttribute="bottom" secondItem="OpM-f5-PkI" secondAttribute="bottom" id="JdS-4d-r5n"/>
-                        <constraint firstItem="Lsw-6N-OOm" firstAttribute="centerX" secondItem="qZc-Zp-EPP" secondAttribute="centerX" id="M7d-Sw-7vs"/>
-                        <constraint firstItem="2fS-sC-h9X" firstAttribute="leading" secondItem="qZc-Zp-EPP" secondAttribute="leading" id="NO1-Pc-IRf"/>
-                        <constraint firstItem="Lsw-6N-OOm" firstAttribute="leading" secondItem="OpM-f5-PkI" secondAttribute="leading" id="dZ1-cb-Ff1"/>
-                        <constraint firstItem="OpM-f5-PkI" firstAttribute="leading" secondItem="qZc-Zp-EPP" secondAttribute="leading" id="v6H-bN-HVr"/>
+                        <constraint firstAttribute="width" constant="245" id="i7k-KD-EhX"/>
+                        <constraint firstAttribute="height" constant="227" id="rKe-eA-OJ3"/>
                     </constraints>
-                </view>
+                </imageView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="S4T-Cp-UGs">
+                    <rect key="frame" x="157" y="79" width="100" height="130"/>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zxV-e7-HT4" customClass="CNAccountSelectView">
-                    <rect key="frame" x="30" y="232" width="354" height="75"/>
+                    <rect key="frame" x="30" y="224" width="354" height="75"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <gestureRecognizers/>
                     <constraints>
@@ -67,12 +42,12 @@
                     </connections>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNn-OH-OZR" customClass="CNTwoStatusBtn">
-                    <rect key="frame" x="30" y="464" width="354" height="48"/>
+                    <rect key="frame" x="30" y="456" width="354" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="nI2-xw-1XR"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                    <state key="normal" title="登录">
+                    <state key="normal" title="去首页">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <state key="disabled">
@@ -82,24 +57,16 @@
                         <action selector="loginBtnClick:" destination="-1" eventType="touchUpInside" id="bsG-Qg-PC1"/>
                     </connections>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="l_USDT" translatesAutoresizingMaskIntoConstraints="NO" id="v4p-XN-AKB">
-                    <rect key="frame" x="139" y="74" width="245" height="227"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="245" id="i7k-KD-EhX"/>
-                        <constraint firstAttribute="height" constant="227" id="rKe-eA-OJ3"/>
-                    </constraints>
-                </imageView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="qZc-Zp-EPP" secondAttribute="trailing" constant="209" id="1AK-th-H6U"/>
-                <constraint firstItem="v4p-XN-AKB" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="30" id="941-W0-k47"/>
+                <constraint firstItem="v4p-XN-AKB" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="941-W0-k47"/>
                 <constraint firstItem="oNn-OH-OZR" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="FSj-ES-kcS"/>
-                <constraint firstItem="qZc-Zp-EPP" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="52" id="GIU-Vy-PHi"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="v4p-XN-AKB" secondAttribute="trailing" constant="30" id="HbG-zb-C0X"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="v4p-XN-AKB" secondAttribute="trailing" id="HbG-zb-C0X"/>
                 <constraint firstItem="zxV-e7-HT4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="L8o-Wy-ayO"/>
-                <constraint firstItem="zxV-e7-HT4" firstAttribute="top" secondItem="qZc-Zp-EPP" secondAttribute="bottom" constant="30" id="NJ8-0p-Fep"/>
-                <constraint firstItem="qZc-Zp-EPP" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="iXi-aF-YNI"/>
+                <constraint firstItem="S4T-Cp-UGs" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="35" id="LFZ-vE-Lf0"/>
+                <constraint firstItem="S4T-Cp-UGs" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="fLw-6f-HAB"/>
+                <constraint firstItem="zxV-e7-HT4" firstAttribute="top" secondItem="S4T-Cp-UGs" secondAttribute="bottom" constant="15" id="nuK-9g-C7g"/>
                 <constraint firstItem="oNn-OH-OZR" firstAttribute="top" secondItem="zxV-e7-HT4" secondAttribute="bottom" constant="157" id="rGe-TP-lUH"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="oNn-OH-OZR" secondAttribute="trailing" constant="30" id="waA-tQ-quQ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="zxV-e7-HT4" secondAttribute="trailing" constant="30" id="xTy-1t-QFN"/>
@@ -114,6 +81,7 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
-        <image name="l_USDT" width="245" height="227"/>
+        <image name="l_USDT" width="375" height="330"/>
+        <image name="logo" width="100" height="130"/>
     </resources>
 </document>
